--- a/src/entities/posts/ui/PostModal/PostModal.module.scss
+++ b/src/entities/posts/ui/PostModal/PostModal.module.scss
@@ -9,7 +9,7 @@
 .fallbackOverlay {
   position: fixed;
   inset: 0;
-  z-index: 998;
+  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: center;
